--- a/index.html
+++ b/index.html
@@ -244,6 +244,6 @@
     ></script>
 
     <!-- Scripts should be placed here to prevent blocking render UI -->
-    <!-- <script type="module" src="js/main.mjs"></script> -->
+    <script type="module" src="/js/main.js"></script>
   </body>
 </html>
