--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
   <body>
     <!-- This is a template HTML for a post item -->
-    <template id="postItemTemplate">
+    <template id="postTemplate">
       <li class="col-12 col-md-6 col-lg-4">
         <div class="post-item mb-4">
           <div class="card">
@@ -171,8 +171,8 @@
           <h1 class="with-underline text-center">Latest posts</h1>
 
           <!-- Posts list -->
-          <ul id="postsList" class="row posts-list justify-content-center">
-            <li class="col-12 col-md-6 col-lg-4">
+          <ul id="postList" class="row posts-list justify-content-center">
+            <!-- <li class="col-12 col-md-6 col-lg-4">
               <div class="post-item mb-4">
                 <div class="card">
                   <img
@@ -207,7 +207,7 @@
                   </div>
                 </div>
               </div>
-            </li>
+            </li> -->
           </ul>
 
           <!-- Posts pagination -->
